--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -1,7 +1,7 @@
 {% define "common/register.tmpl" %}
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" Content="application/json;charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
@@ -11,7 +11,7 @@
 <body>
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<div class="container">
 				<a class="navbar-brand" href="https://urdelusion.com:8080/index">Home</a>
 					<div class="justify-content-end">
@@ -24,12 +24,25 @@
 			</nav>
 		</div>
 		<div>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
+			<form action="http://localhost:8080/register" method="POST">
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input class="form-control" name="id" placeholder="Enter email">
+    			</div>
+    			<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input type="email" class="form-control" name="email" placeholder="Enter email">
+    			</div>
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input type="password" class="form-control" name="password" placeholder="Enter email">
+    			</div>
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input class="form-control" name="role" placeholder="Enter email">
+    			</div>
+    			<button type="submit" class="btn btn-primary">Submit</button>
+  			</form>
 		</div>
 	</div>
 </body>
