--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -24,12 +24,21 @@
 			</nav>
 		</div>
 		<div>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
-			<h1>Hello {% .message %}</h1></br>
+			<form action="http://localhost:8080/login" method="POST">
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input class="form-control" name="id" placeholder="Enter email">
+    			</div>
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input type="password" class="form-control" name="password" placeholder="Enter email">
+    			</div>
+				<div class="form-group">
+      				<label for="email">Email:</label>
+      				<input class="form-control" name="role" placeholder="Enter email">
+    			</div>
+    			<button type="submit" class="btn btn-primary">Submit</button>
+  			</form>
 		</div>
 	</div>
 </body>
