添加辅导员和学生处页面

--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -26,20 +26,20 @@
 		<div>
 			<form action="http://localhost:8080/register" method="POST">
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input class="form-control" name="id" placeholder="Enter email">
+      				<label for="id">ID:</label>
+      				<input class="form-control" name="id" placeholder="Enter student id">
     			</div>
     			<div class="form-group">
       				<label for="email">Email:</label>
       				<input type="email" class="form-control" name="email" placeholder="Enter email">
     			</div>
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input type="password" class="form-control" name="password" placeholder="Enter email">
+      				<label for="password">Password:</label>
+      				<input type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input class="form-control" name="role" placeholder="Enter email">
+      				<label for="Role">Role:</label>
+      				<input class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
