--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -11,7 +11,7 @@
 <body>
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<div class="container">
 				<a class="navbar-brand" href="https://urdelusion.com:8080/index">Home</a>
 					<div class="justify-content-end">
@@ -26,16 +26,16 @@
 		<div>
 			<form action="http://localhost:8080/login" method="POST">
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input class="form-control" name="id" placeholder="Enter email">
+      				<label for="id">ID:</label>
+      				<input class="form-control" name="id" placeholder="Enter student id">
     			</div>
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input type="password" class="form-control" name="password" placeholder="Enter email">
+      				<label for="password">Password:</label>
+      				<input type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input class="form-control" name="role" placeholder="Enter email">
+      				<label for="role">Role:</label>
+      				<input class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
