--- a/views/studentOffice/profile.tmpl
+++ b/views/studentOffice/profile.tmpl
@@ -1,4 +1,4 @@
-{% define "common/index.tmpl" %}
+{% define "studentOffice/profile.tmpl" %}
 <html>
 <head>
 	<meta charset="utf-8">
@@ -13,13 +13,7 @@
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<div class="container">
-				<a class="navbar-brand" href="https://urdelusion.com:8080/index">Home</a>
-					<div class="justify-content-end">
-						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/login">Sign in</a></li>
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/register">Sign up</a></li>
-            			</ul>
-        			</div>
+                <h1>{% .message %}</h1>
 				</div>
 			</nav>
 		</div>
