--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<script src="https://cdn.bootcss.com/layer/3.1.0/layer.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 
@@ -13,18 +14,18 @@
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<div class="container">
-				<a class="navbar-brand" href="https://urdelusion.com:8080/index">Home</a>
+				<a class="navbar-brand" href="/index">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/login">Sign in</a></li>
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/register">Sign up</a></li>
+							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
+							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
             			</ul>
         			</div>
 				</div>
 			</nav>
 		</div>
 		<div>
-			<form action="http://localhost:8080/login" method="POST">
+			<form action="/login" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
       				<input class="form-control" name="id" placeholder="Enter student id">
