--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -13,18 +13,18 @@
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<div class="container">
-				<a class="navbar-brand" href="https://urdelusion.com:8080/index">Home</a>
+				<a class="navbar-brand" href="/index">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/login">Sign in</a></li>
-							<li class="nav-item"><a class="nav-link" href="http://localhost:8080/register">Sign up</a></li>
+							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
+							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
             			</ul>
         			</div>
 				</div>
 			</nav>
 		</div>
 		<div>
-			<form action="http://localhost:8080/register" method="POST">
+			<form action="/register" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
       				<input class="form-control" name="id" placeholder="Enter student id">
