--- a/views/student/profile.tmpl
+++ b/views/student/profile.tmpl
@@ -12,12 +12,18 @@
 	<div class="container-fluid">
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<div class="container">
-                <h1>{% .id %}</h1>
-				</div>
+				<h2>{% .info.ID %}，欢迎您！</h2>
 			</nav>
 		</div>
-		<div>
+		<div class="row">
+			<div class="col-sm-2">
+				<ul class="list-group">
+					<a href="#" class="list-group-item list-group-item-action active">个人信息</a>
+					<a href="#" class="list-group-item list-group-item-action">国家助学金</a>
+					<a href="#" class="list-group-item list-group-item-action">国家励志奖学金</a>
+					<a href="#" class="list-group-item list-group-item-action">应善良助学金</a>
+				</ul>
+			</div>
 		</div>
 	</div>
 </body>
