--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<script src="https://cdn.bootcss.com/jquery.form/4.2.2/jquery.form.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.1.0/layer.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -25,7 +26,7 @@
 			</nav>
 		</div>
 		<div>
-			<form action="/register" method="POST">
+			<form id="registerForm" action="/register" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
       				<input class="form-control" name="id" placeholder="Enter student id">
@@ -47,6 +48,27 @@
 		</div>
 	</div>
 </body>
+
+<script>
+$(document).ready(function() {
+	var	options = {
+		dataType : 'json'
+		success  : ResponseCallback
+	}
+
+	$("#registerForm").ajaxForm(options)
+});
+
+function ResponseCallback(response,data) {
+	if (data.status==1) {
+		layer.alert(data.msg, {icon:2})
+	}
+	if (data.status==0) {
+		alert(response)
+		//window.location.href="/register";
+	}
+}
+</script>
 
 </html>
 {% end %}
