--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 	<script src="https://cdn.bootcss.com/jquery.form/4.2.2/jquery.form.js"></script>
+	<script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.1.0/layer.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -29,19 +30,19 @@
 			<form id="registerForm" action="/register" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
-      				<input class="form-control" name="id" placeholder="Enter student id">
+      				<input id="ID" class="form-control" name="id" placeholder="Enter student id">
     			</div>
     			<div class="form-group">
       				<label for="email">Email:</label>
-      				<input type="email" class="form-control" name="email" placeholder="Enter email">
+      				<input id="EMail" type="email" class="form-control" name="email" placeholder="Enter email">
     			</div>
 				<div class="form-group">
       				<label for="password">Password:</label>
-      				<input type="password" class="form-control" name="password" placeholder="Enter password">
+      				<input id="pwd" type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
       				<label for="Role">Role:</label>
-      				<input class="form-control" name="role" placeholder="Enter role">
+      				<input id="Role" class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
@@ -52,20 +53,19 @@
 <script>
 $(document).ready(function() {
 	var	options = {
-		dataType : 'json'
 		success  : ResponseCallback
 	}
 
 	$("#registerForm").ajaxForm(options)
 });
 
-function ResponseCallback(response,data) {
-	if (data.status==1) {
-		layer.alert(data.msg, {icon:2})
+function ResponseCallback(response,status,xhr,$form) {
+	if (response.status==1) {
+		layer.alert(response.msg, {icon:2})
 	}
-	if (data.status==0) {
-		alert(response)
-		//window.location.href="/register";
+	if (response.status==0) {
+		$.cookie("Authrization", response.Authrization)
+		window.location.href="/auth/"+$("#Role").val()+"/"+$("#ID").val()+"/profile";
 	}
 }
 </script>
