--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -1,10 +1,12 @@
 {% define "common/login.tmpl" %}
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" Content="application/json;charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<script src="https://cdn.bootcss.com/jquery.form/4.2.2/jquery.form.js"></script>
+	<script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.1.0/layer.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -25,24 +27,44 @@
 			</nav>
 		</div>
 		<div>
-			<form action="/login" method="POST">
+			<form id="loginForm" action="/login" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
-      				<input class="form-control" name="id" placeholder="Enter student id">
+      				<input id="ID" class="form-control" name="id" placeholder="Enter student id">
     			</div>
 				<div class="form-group">
       				<label for="password">Password:</label>
-      				<input type="password" class="form-control" name="password" placeholder="Enter password">
+      				<input id="Password" type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
       				<label for="role">Role:</label>
-      				<input class="form-control" name="role" placeholder="Enter role">
+      				<input id="Role" class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
 		</div>
 	</div>
 </body>
+
+<script>
+$(document).ready(function() {
+	var	options = {
+		success  : ResponseCallback
+	}
+
+	$("#loginForm").ajaxForm(options)
+});
+
+function ResponseCallback(response,status,xhr,$form) {
+	if (response.status==1) {
+		layer.alert(response.msg, {icon:2})
+	}
+	if (response.status==0) {
+		$.cookie("Authrization", response.Authrization)
+		window.location.href="/auth/"+$("#Role").val()+"/"+$("#ID").val()+"/profile";
+	}
+}
+</script>
 
 </html>
 {% end %}
