--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -30,15 +30,15 @@
 			<form id="loginForm" action="/login" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
-      				<input id="ID" class="form-control" name="id" placeholder="Enter student id">
+      				<input id="id" class="form-control" name="id" placeholder="Enter student id">
     			</div>
 				<div class="form-group">
       				<label for="password">Password:</label>
-      				<input id="Password" type="password" class="form-control" name="password" placeholder="Enter password">
+      				<input id="password" type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
       				<label for="role">Role:</label>
-      				<input id="Role" class="form-control" name="role" placeholder="Enter role">
+      				<input id="role" class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
@@ -61,7 +61,7 @@ function ResponseCallback(response,status,xhr,$form) {
 	}
 	if (response.status==0) {
 		$.cookie("Authrization", response.Authrization)
-		window.location.href="/auth/"+$("#Role").val()+"/"+$("#ID").val()+"/profile";
+		window.location.href="/auth/"+$("#role").val()+"/"+$("#id").val()+"/profile";
 	}
 }
 </script>
