--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -30,19 +30,19 @@
 			<form id="registerForm" action="/register" method="POST">
 				<div class="form-group">
       				<label for="id">ID:</label>
-      				<input id="ID" class="form-control" name="id" placeholder="Enter student id">
+      				<input id="id" class="form-control" name="id" placeholder="Enter student id">
     			</div>
     			<div class="form-group">
       				<label for="email">Email:</label>
-      				<input id="EMail" type="email" class="form-control" name="email" placeholder="Enter email">
+      				<input id="email" type="email" class="form-control" name="email" placeholder="Enter email">
     			</div>
 				<div class="form-group">
       				<label for="password">Password:</label>
-      				<input id="pwd" type="password" class="form-control" name="password" placeholder="Enter password">
+      				<input id="password" type="password" class="form-control" name="password" placeholder="Enter password">
     			</div>
 				<div class="form-group">
-      				<label for="Role">Role:</label>
-      				<input id="Role" class="form-control" name="role" placeholder="Enter role">
+      				<label for="role">Role:</label>
+      				<input id="role" class="form-control" name="role" placeholder="Enter role">
     			</div>
     			<button type="submit" class="btn btn-primary">Submit</button>
   			</form>
@@ -65,7 +65,7 @@ function ResponseCallback(response,status,xhr,$form) {
 	}
 	if (response.status==0) {
 		$.cookie("Authrization", response.Authrization)
-		window.location.href="/auth/"+$("#Role").val()+"/"+$("#ID").val()+"/profile";
+		window.location.href="/auth/"+$("#role").val()+"/"+$("#id").val()+"/profile";
 	}
 }
 </script>
