--- a/views/student/profile.tmpl
+++ b/views/student/profile.tmpl
@@ -21,11 +21,64 @@
 		<div class="row">
 			<div class="col-sm-2">
 				<ul class="list-group">
-					<a href="#" class="list-group-item list-group-item-action active">个人信息</a>
-					<a href="#" class="list-group-item list-group-item-action">国家助学金</a>
-					<a href="#" class="list-group-item list-group-item-action">国家励志奖学金</a>
-					<a href="#" class="list-group-item list-group-item-action">应善良助学金</a>
+					<a href=/auth/student/{% .info.ID %}/profile class="list-group-item list-group-item-action active">个人信息</a>
+					<a href=/auth/student/{% .info.ID %}/StateGrants class="list-group-item list-group-item-action">国家助学金</a>
+					<a href=/auth/student/{% .info.ID %}/NIS class="list-group-item list-group-item-action">国家励志奖学金</a>
+					<a href=/auth/student/{% .info.ID %}/KindnessScholarship class="list-group-item list-group-item-action">应善良助学金</a>
 				</ul>
+			</div>
+			<div class="col-sm-10">
+				<form id="profileForm" method="POST">
+					<div class="form-group">
+      					<label for="id">学号:</label>
+      					<input id="id" class="form-control" name="id" readonly value={% .info.ID %}>
+					</div>
+					<div class="form-group">
+      					<label for="name">姓名:</label>
+      					<input id="name" class="form-control" name="name" readonly value={% .info.Name %}>
+					</div>
+					<div class="form-group">
+      					<label for="sex">性别:</label>
+      					<input id="sex" class="form-control" name="sex" readonly value={% .info.Sex %}>
+					</div>
+					<div class="form-group">
+      					<label for="birthdate">出生年月:</label>
+      					<input id="birthdate" type="date" class="form-control" name="birthdate" readonly value={% .info.Birthdate %}>
+					</div>
+					<div class="form-group">
+      					<label for="ethnic">民族:</label>
+      					<input id="ethnic" class="form-control" name="ethnic" readonly value={% .info.Ethnic %}>
+					</div>
+					<div class="form-group">
+      					<label for="idnumber">身份证号:</label>
+      					<input id="idnumber" class="form-control" name="idnumber" readonly value={% .info.IDNumber %}>
+					</div>
+					<div class="form-group">
+      					<label for="politicalstatus">政治面貌:</label>
+      					<input id="politicalstatus" class="form-control" name="politicalstatus" readonly value={% .info.PoliticalStatus %}>
+					</div>
+					<div class="form-group">
+      					<label for="college">学院:</label>
+      					<input id="college" class="form-control" name="college" readonly value={% .info.College %}>
+					</div>
+					<div class="form-group">
+      					<label for="profession">专业:</label>
+      					<input id="profession" class="form-control" name="profession" readonly value={% .info.Profession %}>
+					</div>
+					<div class="form-group">
+      					<label for="grade">年级:</label>
+      					<input id="grade" class="form-control" name="grade" readonly value={% .info.Grade %}>
+					</div>
+					<div class="form-group">
+      					<label for="class">班级:</label>
+      					<input id="class" class="form-control" name="class" readonly value={% .info.Class %}>
+					</div>
+					<div class="form-group">
+      					<label for="phone">联系电话:</label>
+      					<input id="phone" class="form-control" name="phone" readonly value={% .info.Phone %}>
+					</div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+  				</form>
 			</div>
 		</div>
 	</div>
