--- a/views/student/stateGrants.tmpl
+++ b/views/student/stateGrants.tmpl
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<h2>，欢迎您！</h2>
+				<h2>{% .id %}，欢迎您！</h2>
 			</nav>
 		</div>
         <div class="row">
@@ -20,11 +20,7 @@
                 <form id="stateGrants" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
 							<label for="id">学号:</label>
-							<input id="id" class="form-control" name="id">
-					</div>
-                    <div class="form-group">
-							<label for="description">申请文本:</label>
-                            <textarea id="description" class="form-control" name="description"></textarea>
+							<input id="id" class="form-control" name="id" value={% .id %}>
 					</div>
                     <div class="form-group">
                         <label for="fsquestionnaire">家庭情况调查表：</label>
@@ -32,7 +28,7 @@
                     </div>
                     <div class="form-group">
                         <label for="accessory">附件：</label>
-                        <input type="file" id="accessory" name="accessory">
+                        <input type="file" id="accessory" name="accessory" multiple>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
