添加辅导员注册信息页面

--- a/views/student/profile.tmpl
+++ b/views/student/profile.tmpl
@@ -67,7 +67,9 @@
 							<label for="phone">联系电话:</label>
 							<input id="phone" class="form-control" name="phone" value={% .info.Phone %}>
 						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -131,7 +133,9 @@
 							<label for="phone">联系电话:</label>
 							<input id="phone" class="form-control" name="phone">
 						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
 					</form>
 				</div>
 			</div>
