--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -29,7 +29,9 @@
       				<label for="role">Role:</label>
       				<input id="role" class="form-control" name="role" placeholder="Enter role">
     			</div>
-    			<button type="submit" class="btn btn-primary">Submit</button>
+    			<div class="form-group">
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
   			</form>
 		</div>
 	</div>
