--- a/views/counselor/profile.tmpl
+++ b/views/counselor/profile.tmpl
@@ -4,12 +4,47 @@
 	<div class="container-fluid">
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<div class="container">
-                <h1>{% .message %}</h1>
-				</div>
+				<h1>test</h1>
 			</nav>
 		</div>
-		<div>
+		<div class="col-sm-2">
+			<ul class="list-group">
+				<a href="" class="list-group-item list-group-item-action active">修改信息</a>
+				<a href="" class="list-group-item list-group-item-action">国家助学金</a>
+				<a href="" class="list-group-item list-group-item-action">国家励志奖学金</a>
+				<a href="" class="list-group-item list-group-item-action">应善良助学金</a>
+			</ul>
+		</div>
+		<div class="col-sm-10">
+			<form id="profileForm">
+				<div class="form-group">
+					<label for="id">工号:</label>
+					<input id="id" class="form-control" name="id">
+				</div>
+				<div class="form-group">
+					<label for="name">姓名:</label>
+					<input id="name" class="form-control" name="name">
+				</div>
+				<div class="form-group">
+					<label for="college">学院:</label>
+					<input id="college" class="form-control" name="college">
+				</div>
+				<div class="form-group">
+					<label for="grade">年级:</label>
+					<input id="grade" class="form-control" name="grade">
+				</div>
+				<div class="form-group">
+					<label for="class">班级:</label>
+					<input id="class" class="form-control" name="class">
+				</div>
+				<div class="form-group">
+					<label for="phone">电话:</label>
+					<input id="phone" class="form-control" name="phone">
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
+			</form>
 		</div>
 	</div>
 	
