--- a/views/student/stateGrants.tmpl
+++ b/views/student/stateGrants.tmpl
@@ -30,7 +30,9 @@
                         <label for="accessory">附件：</label>
                         <input type="file" id="accessory" name="accessory" multiple>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="form-group">
+					    <button type="submit" class="btn btn-primary">Submit</button>
+				    </div>
                 </form>
             </div>
         </div>
