--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -3,36 +3,59 @@
 
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 				<div class="container">
-				<a class="navbar-brand" href="/index">Home</a>
+					<a class="navbar-brand" href="/">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
 							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
 							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
-            			</ul>
-        			</div>
+						</ul>
+					</div>
 				</div>
 			</nav>
 		</div>
-		<div>
-			<form id="loginForm" action="/login" method="POST">
-				<div class="form-group">
-      				<label for="id">ID:</label>
-      				<input id="id" class="form-control" name="id" placeholder="Enter student id">
-    			</div>
-				<div class="form-group">
-      				<label for="password">Password:</label>
-      				<input id="password" type="password" class="form-control" name="password" placeholder="Enter password">
-    			</div>
-				<div class="form-group">
-      				<label for="role">Role:</label>
-      				<input id="role" class="form-control" name="role" placeholder="Enter role">
-    			</div>
-    			<div class="form-group">
-					<button type="submit" class="btn btn-primary">Submit</button>
+		<div style="margin-top:75px;margin-bottom:75px">
+			<div class="row">
+				<div class="col-sm-4">
 				</div>
-  			</form>
+				<div class="col-sm-4">
+					<div class="text-center" style="margin-bottom:25px">
+						<h1>用户登录</h1>
+					</div>
+					<form id="loginForm" action="/login" method="POST">
+						<div class="form-group">
+							<input type="text" class="form-control" name="id" placeholder="请输入您的学号/工号">
+						</div>
+						<div class="form-group">
+							<input id="pwd" type="password" class="form-control" name="password" placeholder="密码">
+						</div>
+						<div class="form-group form-check form-check-inline">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
+							</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="2"> 学生处
+							</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
+							</label>
+						</div>
+						<div class="form-group">
+							<center><button type="submit" class="btn btn-primary">Submit</button></center>
+						</div>
+					</form>
+				</div>
+				<div class="col-sm-4">
+				</div>
+			</div>
+		</div>
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+				<span class="navbar-text" style="width:100%;text-align:center;">
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved.
+				</span>
+			</nav>
 		</div>
 	</div>
 
@@ -40,18 +63,19 @@
 	$(document).ready(function() {
 		var	options = {
 			success  : ResponseCallback
-		}
+		};
 
-		$("#loginForm").ajaxForm(options)
+		$("#loginForm").ajaxForm(options);
 	});
 
 	function ResponseCallback(response,status,xhr,$form) {
 		if (response.status==1) {
-			layer.alert(response.msg, {icon:2})
+			layer.alert(response.msg, {icon:2});
+			return;
 		}
 		if (response.status==0) {
-			$.cookie("Authrization", response.Authrization)
-			window.location.href="/auth/"+$("#role").val()+"/"+$("#id").val()+"/profile";
+			$.cookie("Authrization", response.Authrization);
+			window.location.href = response.Redirect;
 		}
 	}
 	</script>
