--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -38,13 +38,13 @@
 						</div>
 						<div class="form-group form-check form-check-inline">
 							<label class="form-check-label">
-								<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
 							</label>
 							<label class="form-check-label">
-								<input class="form-check-input" type="radio" name="role" value="2"> 学生处
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="2"> 学生处
 							</label>
 							<label class="form-check-label">
-								<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
 							</label>
 						</div>
 						<div class="form-group">
