--- a/views/student/profile.tmpl
+++ b/views/student/profile.tmpl
@@ -13,7 +13,7 @@
 				<input type="text" class="form-control" name="sex" placeholder="性别">
 			</div>
 			<div class="form-group">
-				<input type="date" class="form-control" name="birthdate" placeholder="出生日期">
+				<input type="text" onfocus="(this.type='date')" class="form-control" name="birthdate" placeholder="出生日期">
 			</div>
 			<div class="form-group">
 				<input type="text" class="form-control" name="ethnic" placeholder="民族">
