--- a/views/counselor/profileForm.tmpl
+++ b/views/counselor/profileForm.tmpl
@@ -4,13 +4,18 @@
 	<div class="container-fluid">
         <form id="profileForm" method="POST">
             <div class="form-group">
-                <input type="text" class="form-control" name="id" readonly value={% .ID %}>
+                <input type="text" class="form-control" name="id" readonly value="{% .ID %}">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" name="name" placeholder="姓名">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="grade" placeholder="年级">
+                <select class="form-control" name="grade" placeholder="年级">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" name="college" placeholder="学院">
@@ -42,7 +47,7 @@
 			}
 			if (response.status==0) {
 				layer.alert("提交信息成功", {icon:6})
-				window.location.href="/auth/counselor/"+$("#id").val()+"/profile";
+				window.location.href="/auth/1/"+$("#id").val()+"/profile";
 			}
 		}
 	</script>
