--- a/views/common/login.tmpl
+++ b/views/common/login.tmpl
@@ -30,6 +30,14 @@
 						<div class="form-group">
 							<input id="pwd" type="password" class="form-control" name="password" placeholder="密码">
 						</div>
+						<div class="form-group">
+							<input id="captcha" type="text" class="form-control" name="captchaSolution" placeholder="验证码">
+						</div>
+						<div class="input-group">
+							<p><img id="image" src="/captcha/{% .captcha.CaptchaID %}.png" alt="Captcha image"></p>
+							<input id="captchaID" type="hidden" name="captchaID" value="{% .captcha.CaptchaID %}">
+							<button href="#" type="button" class="btn btn-link" onclick="ReloadCaptcha();">刷新验证码</button>
+						</div>
 						<div class="form-group form-check form-check-inline">
 							<label class="form-check-label">
 								<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
@@ -87,13 +95,32 @@
 			return true;
 		}
 
+		function VerifyCaptcha() {
+			regExp = /^[0-9]{6}$/;
+			if (($("#captcha").val() == "") || (!regExp.test($("#captcha").val()))) {
+				layer.tips("验证码是6位数字", $("#captcha"));
+				return false;
+			}
+			return true;
+		}
+
+		function ReloadCaptcha() {
+			$.post("/captcha", {}, function (response) {
+				document.getElementById('image').src = "/captcha/"+response.captchaID+".png";
+				document.getElementById('captchaID').value = response.captchaID;
+				return false;
+			}
+		)}
+
 		function VerifyRequest(formData, jqForm, options) {
-			return VerifyID() && VerifyPassword();
+			return VerifyID() && VerifyPassword() && VerifyCaptcha();
 		}
 
 		function ResponseCallback(response,status,xhr,$form) {
 			if (response.status==1) {
 				layer.alert(response.msg, {icon:2});
+				document.getElementById('image').src = "/captcha/"+response.captchaID+".png";
+				document.getElementById('captchaID').value = response.captchaID;
 				return;
 			}
 			if (response.status==0) {
