验证码更新

--- a/views/common/index.tmpl
+++ b/views/common/index.tmpl
@@ -20,7 +20,7 @@
 		<div>
 			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
 				<span class="navbar-text" style="width:100%;text-align:center;">
-					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved.
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved. 渝ICP备 16012597号
 				</span>
 			</nav>
 		</div>
