--- a/views/counselor/profileForm.tmpl
+++ b/views/counselor/profileForm.tmpl
@@ -11,14 +11,40 @@
             </div>
             <div class="form-group">
                 <select class="form-control" name="grade" placeholder="年级">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
+                    <option>17级</option>
+                    <option>16级</option>
+                    <option>15级</option>
+                    <option>14级</option>
                 </select>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="college" placeholder="学院">
+                <select class="form-control" name="college" placeholder="年级">
+                    <option>新闻学院</option>
+                    <option>旅游学院</option>
+                    <option>音乐学院</option>
+                    <option>幼儿师范学院</option>
+                    <option>特殊教育学院</option>
+                    <option>马克思主义学院</option>
+                    <option>历史与社会学院</option>
+                    <option>教育科学学院</option>
+                    <option>体育与健康科学学院</option>
+                    <option>文学院</option>
+                    <option>外国语学院</option>
+                    <option>音乐学院</option>
+                    <option>美术学院</option>
+                    <option>新闻与传媒学院</option>
+                    <option>数学科学学院</option>
+                    <option>物理与电子工程学院</option>
+                    <option>化学学院</option>
+                    <option>生命科学学院</option>
+                    <option>地理与旅游学院</option>
+                    <option>经济与管理学院</option>
+                    <option>计算机与信息科学学院</option>
+                    <option>初等教育学院</option>
+                    <option>继续教育学院</option>
+                    <option>国际汉语文化学院</option>
+                    <option>职教师资学院</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" name="class" placeholder="所带班级">
